--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # Hugging Face API Key
 HUGGING_FACE_API_KEY=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
+FLASK_SECRET_KEY=your-flask-secret-key
 
 # OpenAI API Key 
 OPENAI_API_KEY=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
